# rnnoise

./: CMakeLists.txt
examples/: CMakeLists.txt  rnnoise_demo.c
src/: CMakeLists.txt  arch.h  celt_lpc.c  denoise.c  pitch.c
vs-project/: vs-project.sln
vs-project/DemoRNNoise/: DemoRNNoise.vcxproj  DemoRNNoise.vcxproj.filters
vs-project/librnnoise/: librnnoise.vcxproj  librnnoise.vcxproj.filters
